comentários das alterações updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,23 @@
 version: '3'
     
 services:
-db:
-    image: postgres
-    environment:
-    - POSTGRES_DB=postgres
-    - POSTGRES_USER=postgres
-    - POSTGRES_PASSWORD=postgres
-web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-    - .:/DockerDjangoApi
-    ports:
-    - "8000:8000"
-    depends_on:
-    - db
+    db:
+        image: postgres
+        environment:
+        - POSTGRES_DB=postgres
+        - POSTGRES_USER=postgres
+        - POSTGRES_PASSWORD=postgres
+
+    web:
+        build: .
+        command: python manage.py runserver 0.0.0.0:8000
+        volumes:
+        - .:/code #.:/DockerDjangoApi
+        ports:
+        - "8000:8000"
+        depends_on:
+        - db
+
+    
+    #     image: nouchka/sqlite3
+    #     #image: keinos/sqlite3:latest
