--- a/requirements.txt
+++ b/requirements.txt
@@ -23,13 +23,12 @@ Markdown==3.2.2
 mccabe==0.6.1
 paramiko==2.7.1
 pipreqs==0.4.10
+psycopg2==2.8.5
 pycparser==2.20
 PyNaCl==1.4.0
-pypiwin32==223
 pyrsistent==0.16.0
 python-dotenv==0.14.0
 pytz==2020.1
-pywin32==228
 PyYAML==5.3.1
 requests==2.24.0
 six==1.15.0
