update config docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,16 +8,17 @@ services:
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
 
+
     web:
         build: .
-        command: python manage.py runserver 0.0.0.0:8000
+        command: >
+            bash -c "python manage.py makemigrations && 
+            python manage.py migrate && 
+            python manage.py runserver 0.0.0.0:8000
+            "
         volumes:
-        - .:/code #.:/DockerDjangoApi
+            - .:/DockerDjangoApi #.:/
         ports:
-        - "8000:8000"
+            - "8000:8000"
         depends_on:
-        - db
-
-    
-    #     image: nouchka/sqlite3
-    #     #image: keinos/sqlite3:latest
+            - db
