--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
             python manage.py runserver 0.0.0.0:8000
             "
         volumes:
-            - .:/DockerDjangoApi #.:/
+            - .:/DockerDjangoApi
         ports:
             - "8000:8000"
         depends_on:
